client/src/styles/admin.css
.adminSearch{
    font-size: 16px;
    color: white;
}


input.admin{
    width: 165px;
    margin: 5px;
}
.centerFlexRow{
    text-align: center;
    vertical-align: middle;
    margin: auto 0px;
    display: flex;
    flex-flow: row wrap;
    align-items: center;
  }

.checkbox-grid li {
    display: block;
    float: left;
    color: white;
}

.checkBox {
    padding-top: 20px;
    text-align: left;
    font-size: 12px;
    margin-right: 25px;
    padding-inline-start: 4px;
}

.width90{
    width: 95%;
}

